--- a/announce.css
+++ b/announce.css
@@ -318,78 +318,64 @@ a {
 
 #nav{
     text-align: center;
+    position: fixed;
     z-index: 1;
-    min-height: 80px;
-    height: auto;
+    top:0;
+    height: 80px;
     width: 100%;
-    background-color: lightgrey;
-    border-bottom: solid 1px black;
+    background-color: #EDF1D6;
     color:black;
 }
-
 .nav-container{
     display: flex;
+    justify-content: left;
+    text-align: left;
     flex-direction: row;
     width: 100%;
     margin: 0;
     padding: 80;
     list-style-type: none;
 }
-
 .nav-item{
     text-align: center;
     cursor: pointer;
-    padding-top: 10px;
-    margin-top: 15px;
     font-size: 20px;
+    margin-top:15px;
+    padding-top:10px;
     width:250px;
     height:50px;
 }
-
 .nav-home{
     cursor: pointer;
     margin-top: 15px;
     width:250px;
-    background-color: lightgrey;
+    background-color: #EDF1D6;
 }
-
 .nav-item:hover {
-    border: 1px solid black;
+    border:1px solid black;
 }
 
 #loginbt{
     margin-top: 20px;
 }
-
+.slider{
+    margin:0 auto;
+    width: 60%;
+}
 .nav-container-in{
     display: none;
     list-style-type: none;
-    padding-top: 10px;
-    background-color: lightgrey;
+    text-align: center;
     width: 100%;
 }
-#act2 .nav-container-in {
-    position: absolute;
-    left: 250px;
-    top: 80px;
-}
-
-#act1 .nav-container-in {
-    position: absolute;
-    left: 495px;
-    top: 80px;
-}
-
 .nav-item-in{
     text-align: left;
     cursor: pointer;
     font-size: 20px;
-    width:245px;
+    margin-top:15px;
+    padding-top:10px;
+    width:250px;
     height:50px;
-    padding-left: 15px;
-    padding-top: 10px;
+    background-color: transparent;
     color:black;
-    border: 1px solid black;
 }
-
-/* div nav end */
