--- a/aboutus.css
+++ b/aboutus.css
@@ -55,7 +55,7 @@ body{
     top:0;
     height: 80px;
     width: 100%;
-    background-color: lightgrey;
+    background-color: #FFD4D4;
     color:black;
 }
 .nav-container{
@@ -82,7 +82,7 @@ body{
   cursor: pointer;
   margin-top: 15px;
   width:250px;
-  background-color: lightgrey;
+  background-color: #FFD4D4;
 }
 .nav-item:hover {
   border:1px solid black;
@@ -126,7 +126,7 @@ body{
 }
 
 .ploggingdiv{
-    padding-top: 80px;
+    padding-top: 20px;
 }
 
 .ploggingin{
@@ -135,6 +135,7 @@ body{
 
 .bigtxt{
     font-weight: bold;
+    font-size: xx-large;
 }
 
 .advtitle{
@@ -143,10 +144,12 @@ body{
 
 .subtxt0{
     margin-bottom: 80px;
+    font-size: medium;
 }
 
 .subtxt{
     margin-top: 20px;
+    font-size: medium;
 }
 
 .ploggingadv {
@@ -190,7 +193,7 @@ body{
 .adv-desctitle{
     font-size: large;
     text-decoration-line: underline;
-    background-color: rgb(242, 245, 174);
+    background-color: #d7e8b2;
     margin-bottom: 15px;
 }
 
@@ -234,6 +237,7 @@ body{
 .flip-card-back {
     color: black;
     transform: rotateY(180deg);
+    font-size: small;
 }
 
 .ploggingdiv{
@@ -314,7 +318,7 @@ body{
     background-color: #f6f6f6;
     margin-top: 80px;
     padding-top: 70px;
-    padding-bottom: 70px;
+    padding-bottom: 80px;
     border-radius: 20px;
 }
 
@@ -330,16 +334,19 @@ body{
 
 .memname{
     margin-top: 15px;
+    font-size: medium;
 }
 
 .membertxt{
     margin-top: 20px;
     padding-left: 70px;
     padding-right: 70px;
+    font-size: small;
 }
 
 .introducetxt{
     margin-top: 10px;
+    font-size: medium;
 }
 
 .githublink{
@@ -354,6 +361,11 @@ body{
 .subtxt2{
     margin-top: 20px;
     margin-bottom: 80px;
+    font-size: small;
+}
+
+.img-circle{
+    cursor: pointer;
 }
 /* div member end */
 
@@ -361,12 +373,14 @@ body{
 .sitelink{
     text-align: center;
     margin-bottom: 10px;
+    cursor: pointer;
+    font-size: small;
 }
 
 #rel_site{
     color: gray;
     font-weight: 500;
-    font-size: 20px;
+    font-size: large;
     display: inline-block;
 }
 
@@ -389,7 +403,7 @@ body{
     padding-left: 10px;
     height: 150px;
     width: 100%;
-    background-color: lightgrey;
+    background-color: #FFD4D4;
     color:black;
-  }
+}
 /* div footer end */
