--- a/main.css
+++ b/main.css
@@ -6,7 +6,8 @@
 }
 
 body{
-    width:98%;
+    width:100%;
+    height: 100%;
     background-size: 100% 100%;
     background-color: white;
     font-family: 'Pretendard-Regular';
@@ -29,7 +30,7 @@ body{
     top:0;
     height: 80px;
     width: 100%;
-    background-color: lightgray;
+    background-color: #FFD4D4;
     color:black;
 }
 
@@ -59,7 +60,7 @@ body{
     cursor: pointer;
     margin-top: 15px;
     width:250px;
-    background-color: lightgray;
+    background-color: #FFD4D4;
 }
 
 .nav-item:hover {
@@ -107,14 +108,12 @@ body{
 }
 
 .footer{
-    margin-top: 200px;
-    margin-left: 0;
     text-align: left;
-    height: 200px;
-    width: 100%;
     padding-top: 10px;
     padding-left: 10px;
-    background-color: lightgray;
+    height: 150px;
+    width: 100%;
+    background-color: #FFD4D4;
     color:black;
 }
 
@@ -143,7 +142,7 @@ body{
 
 .layer{
     text-align: center;
-    background-color: lightgray;
+    background-color: rgb(237, 231, 236);
     padding: 20px 20px 20px 20px;
     border-radius: 20px;
     border: solid 5px white;
@@ -170,4 +169,9 @@ table{
 .card{
     text-align: center;
     margin: auto;
+}
+.animation1{
+    background-image: url("image/ploback.png");
+    background-size: cover;
+    margin-top: 40px;
 }
