--- a/treetest.css
+++ b/treetest.css
@@ -21,11 +21,12 @@ body{
     top:0;
     height: 80px;
     width: 100%;
-    background-color: lightgrey;
+    background-color: #FFD4D4;
     color:black;
 }
 
 .nav-container{
+    
     display: flex;
     justify-content: left;
     text-align: left;
@@ -50,12 +51,23 @@ body{
     cursor: pointer;
     margin-top: 15px;
     width:250px;
-    background-color: lightgrey;
+    background-color: #FFD4D4;
 }
 
 .nav-item:hover {
     border:1px solid black;
   
+}
+
+.title{
+    margin-top: 80px;
+    text-align: center;
+}
+
+.titlebig{
+    font-size: 60px;
+    font-weight: bold;
+    margin-bottom: 100px;
 }
 
 #loginbt{
@@ -64,7 +76,7 @@ body{
 
 .slider{
     margin:0 auto;
-     width: 60%;
+    width: 80%;
 }
 
 .nav-container-in{
@@ -190,11 +202,12 @@ body{
 
 /* div question end */
 .result-btn {
-     /*display: none; 이거는 민정 구조 확인 하는 용도로 쓰고 js 작업 시작하면 none으로 해놓고 js 통해서 질문에 대한 선택 다 하면 btn이 보이게끔*/
+    /*display: none; 이거는 민정 구조 확인 하는 용도로 쓰고 js 작업 시작하면 none으로 해놓고 js 통해서 질문에 대한 선택 다 하면 btn이 보이게끔*/
     display: block;
     margin: 0 auto;
     cursor: pointer;
 }
+
 
 /* div result start */
 .result{
@@ -263,6 +276,12 @@ body{
 /* div result end */
 
 /* div share start */
+.share{
+    display: none;
+}
+.go-result{
+    display: none;
+}
 .share-btn{
     /*display: none; 이거는 민정 구조 확인 하는 용도로 쓰고 js 작업 시작하면 none으로 해놓고 js 통해서 테스트 결과 뜨면 share 버튼도 함께 뜨게 끔*/
     display: block;
@@ -270,15 +289,21 @@ body{
     text-align: center;
     margin-top: 20px;
     border: 1px solid skyblue;
+
 }
 /* div share end */
 
 /* div content end*/
 
 /* div footer start */
-.footer {
-    margin-top: 100px;
-    height: 150px;
-    background-color: #5b7b5b;
+.footer{
+    text-align: left;
+    padding-top: 10px;
+    padding-left: 10px;
+    height: 170px;
+    width: 100%;
+    background-color: #FFD4D4;
+    color:black;
+    margin-top:30px;
 }
 /* div footer end */
