"0601 푸터내용변경/self check 수정"

--- a/announce.css
+++ b/announce.css
@@ -98,7 +98,7 @@ a {
 .board_list {
     width: 100%;
     border-top: 2px solid #000;
-    background-color: #FDF5DC;
+    background-color: #FFFFE8;
 }
 
 .board_list > div {
@@ -312,7 +312,7 @@ a {
     padding-left: 10px;
     height: 150px;
     width: 100%;
-    background-color: #EDF1D6;
+    background-color: #FFD4D4;
     color:black;
 }
 
@@ -323,7 +323,7 @@ a {
     top:0;
     height: 80px;
     width: 100%;
-    background-color: #EDF1D6;
+    background-color: #FFD4D4;
     color:black;
 }
 .nav-container{
@@ -349,7 +349,7 @@ a {
     cursor: pointer;
     margin-top: 15px;
     width:250px;
-    background-color: #EDF1D6;
+    background-color: #FFD4D4;
 }
 .nav-item:hover {
     border:1px solid black;
