--- a/aboutus.css
+++ b/aboutus.css
@@ -407,9 +407,22 @@ body{
     text-align: left;
     padding-top: 10px;
     padding-left: 10px;
-    height: 170px;
+    height: 180px;
     width: 100%;
     background-color: #FFD4D4;
     color:black;
+}
+
+.footerdes{
+    margin-top: 10px;
+}
+.footer a:not(:last-of-type) {
+    margin-right: 15px;
+}
+.footerdes{
+    margin-top: 10px;
+}
+.footer a:not(:last-of-type) {
+    margin-right: 15px;
 }
 /* div footer end */
