plogging course 추천 수 오류 수정 및 푸터 수정

--- a/ploggingcourse.css
+++ b/ploggingcourse.css
@@ -299,9 +299,17 @@ body{
     text-align: left;
     padding-top: 10px;
     padding-left: 10px;
-    height: 150px;
+    height: 190px;
     width: 100%;
+    font-size: 14px;
     background-color: #FFD4D4;
     color:black;
+}
+
+.footerdes{
+    margin-top: 10px;
+}
+.footer a:not(:last-of-type) {
+    margin-right: 15px;
 }
 /* div footer end */
