--- a/intro.css
+++ b/intro.css
@@ -8,8 +8,7 @@
 body{
     width:100%;
     height:100%;
-    background-image: url("image/bg2.jpg");
-    background-size: cover;
+    
     font-family: 'Pretendard-Regular';
 }
 
@@ -19,9 +18,7 @@ body{
     
 }
 
-.highlight{
-    transform:scale(1.5);
-}
+
 
 .trash{
     position: absolute;
@@ -29,45 +26,46 @@ body{
 }
 
 #trash1{
-    left: 40%;
-    top: 80%;
+    left: 25%;
+    top: 45%;
     transform: rotate(40deg);
 }
 
 #trash2{
-    left: 70%;
-    top: 80%;
+    left: 60%;
+    top: 40%;
     transform: rotate(225deg);
 }
 
 #trash3{
-    left: 25%;
-    top: 85%;
+    left: 35%;
+    top: 50%;
     transform: rotate(10deg);
 }
 
 #trash4{
     left: 45%;
-    top: 75%;
+    top: 45%;
     transform: rotate(45deg);
 }
 
 #trash5{
-    left: 85%;
-    top: 85%;
+    left: 55%;
+    top: 50%;
     transform: rotate(45deg);
 }
 
 #trash6{
-    left: 60%;
-    top: 70%;
+    left: 38%;
+    top: 38%;
     transform: rotate(100deg);
 }
 
 #page1{
     width:100%;
     height: 1000px;
-    background-image: url("image/bg2.jpg");
+    background-image: url("image/bg2.png");
+    
     background-size: cover;
     background-repeat: no-repeat;
     background-position: cover;
@@ -75,21 +73,10 @@ body{
     text-align: center;
 }
 
-#page2{
-    width:100%;
-    height: 1000px;
-    background-color: white;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: cover;
-    display: none;
-    margin: 0 auto;
-    text-align: center;
-}
 
-.content{
-width: 80%;
-margin: auto;
+#title{
+    margin: 0 auto;
+    margin-top: 20%;
 }
 
 .title{
@@ -124,4 +111,12 @@ text-align: center;
 .hideme{
 color:black;
 display:none;
+}
+button{
+    background-color: #FFD4D4;
+    border-radius: 50px;
+    border: white solid 3px;
+}
+button:hover{
+    background-color: #ffa0a0;
 }
