--- a/intro.css
+++ b/intro.css
@@ -91,31 +91,48 @@ margin: 0 auto;
 .titletxt1{
 display: block;
 color: white;
-font-family: 'GmarketSansMedium';
+font-family: 'Pretendard-Regular';
 font-weight: 700;
 font-size: 100px;
 margin: 0 auto;
 text-align: center;
+margin-bottom: 50px;
 }
 
 .titletxt2{
 display: block;
 color: white;
-font-family: 'GmarketSansMedium';
+font-family: 'Pretendard-Regular';
 font-weight: 700;
-font-size: 50px;
+font-size: xx-large;
 margin: 0 auto;
 text-align: center;
+margin-bottom: 50px;
 }
 
 .hideme{
 color:black;
 display:none;
 }
+
+.btntxt{
+    display: inline-block;
+    color: white;
+    font-family: 'Pretendard-Regular';
+    font-weight: bold;
+    text-align: center;
+    font-size: large;
+    margin: auto 0;
+}
+
 button{
     background-color: #FFD4D4;
+    width: 200px;
+    height: 50px;
     border-radius: 50px;
     border: white solid 3px;
+    text-align: center;
+    margin: auto 0;
 }
 button:hover{
     background-color: #ffa0a0;
