--- a/aboutus.css
+++ b/aboutus.css
@@ -47,7 +47,7 @@ body{
     to {opacity: 1;}
 }
 
-/* div navbar start*/
+/* div nav start */
 #nav{
     text-align: center;
     position: fixed;
@@ -58,8 +58,8 @@ body{
     background-color: #FFD4D4;
     color:black;
 }
+
 .nav-container{
-    
     display: flex;
     justify-content: left;
     text-align: left;
@@ -69,6 +69,7 @@ body{
     padding: 80;
     list-style-type: none;
 }
+
 .nav-item{
     text-align: center;
     cursor: pointer;
@@ -78,32 +79,37 @@ body{
     width:250px;
     height:50px;
 }
+
 .nav-home{
-  cursor: pointer;
-  margin-top: 15px;
-  width:250px;
-  background-color: #FFD4D4;
+    cursor: pointer;
+    margin-top: 15px;
+    width:250px;
+    background-color: #FFD4D4;
 }
+
 .nav-item:hover {
-  border:1px solid black;
+    border:1px solid black;
   
 }
 
 #loginbt{
-  margin-top: 20px;
+    margin-top: 20px;
 }
+
 .slider{
-  margin:0 auto;
-  width: 60%;
+    margin:0 auto;
+     width: 60%;
 }
+
 .nav-container-in{
-  display: none;
-  list-style-type: none;
+    display: none;
+    list-style-type: none;
     text-align: center;
     width: 100%;
 }
+
 .nav-item-in{
-  text-align: left;
+    text-align: left;
     cursor: pointer;
     font-size: 20px;
     margin-top:15px;
@@ -112,8 +118,21 @@ body{
     height:50px;
     background-color: transparent;
     color:black;
+
 }
-/* div navbar end*/
+
+.nav-item-in a {
+    color: black;
+    text-decoration: none;
+}
+
+.nav-item a{
+    color: black;
+    text-decoration: none;
+}
+
+/* div nav end */
+
 
 
 /* div plogging start */
