--- a/main.css
+++ b/main.css
@@ -94,6 +94,17 @@ body{
     height:50px;
     background-color: transparent;
     color:black;
+
+}
+
+.nav-item-in a {
+    color: black;
+    text-decoration: none;
+}
+
+.nav-item a{
+    color: black;
+    text-decoration: none;
 }
 
 /* div nav end */
