--- a/board.css
+++ b/board.css
@@ -336,7 +336,7 @@ a {
     margin-right: 15px;
 }
 
-
+/* div nav start */
 #nav{
     text-align: center;
     position: fixed;
@@ -344,9 +344,10 @@ a {
     top:0;
     height: 80px;
     width: 100%;
-    background-color:#FFD4D4;
+    background-color: #FFD4D4;
     color:black;
 }
+
 .nav-container{
     display: flex;
     justify-content: left;
@@ -357,6 +358,7 @@ a {
     padding: 80;
     list-style-type: none;
 }
+
 .nav-item{
     text-align: center;
     cursor: pointer;
@@ -366,29 +368,35 @@ a {
     width:250px;
     height:50px;
 }
+
 .nav-home{
     cursor: pointer;
     margin-top: 15px;
     width:250px;
     background-color: #FFD4D4;
 }
+
 .nav-item:hover {
     border:1px solid black;
+  
 }
 
 #loginbt{
     margin-top: 20px;
 }
+
 .slider{
     margin:0 auto;
-    width: 60%;
+     width: 60%;
 }
+
 .nav-container-in{
     display: none;
     list-style-type: none;
     text-align: center;
     width: 100%;
 }
+
 .nav-item-in{
     text-align: left;
     cursor: pointer;
@@ -399,4 +407,17 @@ a {
     height:50px;
     background-color: transparent;
     color:black;
+
 }
+
+.nav-item-in a {
+    color: black;
+    text-decoration: none;
+}
+
+.nav-item a{
+    color: black;
+    text-decoration: none;
+}
+
+/* div nav end */
