--- a/selfcheck.css
+++ b/selfcheck.css
@@ -78,7 +78,7 @@ body{
 .footer a:not(:last-of-type) {
     margin-right: 15px;
 }
-
+/* div nav start */
 #nav{
     text-align: center;
     position: fixed;
@@ -89,6 +89,7 @@ body{
     background-color: #FFD4D4;
     color:black;
 }
+
 .nav-container{
     display: flex;
     justify-content: left;
@@ -99,6 +100,7 @@ body{
     padding: 80;
     list-style-type: none;
 }
+
 .nav-item{
     text-align: center;
     cursor: pointer;
@@ -108,29 +110,35 @@ body{
     width:250px;
     height:50px;
 }
+
 .nav-home{
     cursor: pointer;
     margin-top: 15px;
     width:250px;
     background-color: #FFD4D4;
 }
+
 .nav-item:hover {
     border:1px solid black;
+  
 }
 
 #loginbt{
     margin-top: 20px;
 }
+
 .slider{
     margin:0 auto;
-    width: 60%;
+     width: 60%;
 }
+
 .nav-container-in{
     display: none;
     list-style-type: none;
     text-align: center;
     width: 100%;
 }
+
 .nav-item-in{
     text-align: left;
     cursor: pointer;
@@ -141,4 +149,18 @@ body{
     height:50px;
     background-color: transparent;
     color:black;
+
 }
+
+.nav-item-in a {
+    color: black;
+    text-decoration: none;
+}
+
+.nav-item a{
+    color: black;
+    text-decoration: none;
+}
+
+/* div nav end */
+
