--- a/treetest.css
+++ b/treetest.css
@@ -26,7 +26,6 @@ body{
 }
 
 .nav-container{
-    
     display: flex;
     justify-content: left;
     text-align: left;
@@ -59,24 +58,13 @@ body{
   
 }
 
-.title{
-    margin-top: 80px;
-    text-align: center;
-}
-
-.titlebig{
-    font-size: 60px;
-    font-weight: bold;
-    margin-bottom: 100px;
-}
-
 #loginbt{
     margin-top: 20px;
 }
 
 .slider{
     margin:0 auto;
-    width: 80%;
+     width: 60%;
 }
 
 .nav-container-in{
@@ -96,9 +84,21 @@ body{
     height:50px;
     background-color: transparent;
     color:black;
+
+}
+
+.nav-item-in a {
+    color: black;
+    text-decoration: none;
+}
+
+.nav-item a{
+    color: black;
+    text-decoration: none;
 }
 
 /* div nav end */
+
 
 /* div content start */
 .content{
