main layer 색상 수정 및 tree test 공유하기 버튼 밑 margin 수정, title PLOPLO로 모두 수정함

--- a/treetest.css
+++ b/treetest.css
@@ -289,6 +289,7 @@ body{
     text-align: center;
     margin-top: 20px;
     border: 1px solid skyblue;
+    margin-bottom: 80px;
 
 }
 /* div share end */
